# LumaSR

./: .clangd  .gitignore  AGENTS.md  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: model_manifest.json
app/src/main/assets/models/: README.md
app/src/main/assets/models/realcugan/models-pro/: SOURCE.txt
app/src/main/assets/models/realcugan/models-se/: SOURCE.txt
app/src/main/assets/models/realesrgan/: SOURCE.txt
app/src/main/assets/models/waifu2x/models-cunet/: SOURCE.txt
app/src/main/assets/models/waifu2x/models-upconv_7_anime_style_art_rgb/: SOURCE.txt
app/src/main/assets/models/waifu2x/models-upconv_7_photo/: SOURCE.txt
app/src/main/cpp/: CMakeLists.txt  superres_engine.cpp  superres_engine.h  superres_jni.cpp  superres_png_streamer.cpp  superres_tile_geometry.h  superres_tile_geometry_checks.cpp
app/src/main/java/com/lumasr/: MainActivity.kt
app/src/main/java/com/lumasr/data/: GalleryRepository.kt  ImageCacheRepository.kt  ModelAssetRepository.kt  ModelManifestParser.kt  ModelManifestRepository.kt  UserPreferencesRepository.kt
app/src/main/java/com/lumasr/domain/: AutoTileSizePolicy.kt  ExtremeAccelerationPolicy.kt  ExtremeExportPlanner.kt  ExtremeTileScheduler.kt  MediaOutputNamer.kt  ModelCapabilities.kt  ModelRuntimePolicy.kt  ResourceBudgetPolicy.kt  (+6 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: styles.xml
docs/: builtin-models.md  native-inference.md
scripts/: download-deps.ps1
(+49 files in other folders)
